# shiki-server

./: .gitignore  Cargo.toml  Dockerfile  build.rs  compose.yaml  rustfmt.toml
.github/workflows/: ci.yml
lib/: lib.rs  opcode.rs
src/: auth.rs  errors.rs  events.rs  main.rs  models.rs  opus.rs  opusfile.rs  redis.rs  routes.rs  server.rs  session.rs  speexdsp.rs  utils.rs  validator.rs
src/routes/: api.rs  auth.rs  gateway.rs  middleware.rs  mod.rs  rtc.rs
src/rtc/: handler.rs
src/ws/: events.rs  mod.rs  server.rs  session.rs
sys/: CMakeLists.txt  wrapper.h
sys/cmake/: conan.cmake
