[package]
name = "websocket-example"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "websocket-chat-server"
path = "src/main.rs"

[dependencies]
actix = "0.13.1"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
mongodb = "2.7.0"
rand = "0.8.5"
serde = "1.0.188"
serde_json = "1.0.107"
tokio = "1.33.0"
validator = { version = "0.16.1", features = ["derive"] }
