[package]
name = "shiki-server"
version = "0.4.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "shiki-server"
path = "src/main.rs"

[lib]
name = "derives"
path = "lib/lib.rs"
proc-macro = true

[dependencies]
actix = "0.13.1"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
actix-web-httpauth = "0.8.1"
argon2 = "0.5.2"
chrono = "0.4.31"
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
mongodb = "2.7.0"
rand = "0.8.5"
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
uuid = "1.4.1"
validator = { version = "0.16.1", features = ["derive"] }
rs-snowflake = "0.6.0"
anyhow = "1.0.75"
futures-util = "0.3.29"
syn = { version = "2.0.39", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
futures = "0.3.29"
webrtc-unreliable = "0.5.3"
mime = "0.3.17"
actix-session = { version = "0.8.0", features = [
    "redis-actor-session",
    "redis-rs-tls-session"
] }
deadpool-redis = "0.14.0"
redis-derive = "0.1.7"

[build-dependencies]
bindgen = "0.68.1"
cmake = "0.1.31"
